# tricky-mesh-ai-api

./: .gitignore  README.md  config.example.yaml  plan.md  pyproject.toml
src/tricky_mesh_ai/: __main__.py  config.py  daemon.py  deadletter.py  http_server.py  llm.py  memory.py  metrics.py  ratelimit.py  summarizer.py  truncate.py
systemd/: tricky-mesh-ai.service
tests/: test_config.py  test_daemon.py  test_deadletter.py  test_http_server.py  test_llm.py  test_memory.py  test_metrics.py  test_ratelimit.py  test_summarizer.py  test_truncate.py
