[project]
name = "tricky-mesh-ai-api"
version = "0.1.0"
description = "HTTP bridge: Remote-Terminal-for-MeshCore webhook DMs → llama.cpp auto-reply"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
tricky-mesh-ai = "tricky_mesh_ai.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tricky_mesh_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
